see ISSUES file for next steps

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,13 @@
 0.0.1-alpha@zig:
+----------------
 tsc is now public archive won't be updating it
 & zig linear and linear comb model done
 & Matrix struct defined
 & common activiation functions defined
+
+0.0.02-alpha@:
+--------------
+zig matric library is now complete
+& xor_model is function
+
 
